--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
